
2023-02-21  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_set_packed): backport and extend optimization
	  from 4.x by Ron - now skipping initial zeros and for huge fields handle
	  4 digits at once

2023-02-20  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c, numeric.c: explicit check result of mpz_sgn to 0/!0/1/-1
	* intrinsic.c (cob_intr_random): fix binary end for implicit seed
	* intrinsic.c (numval): minor optimization for invalid numeric

2023-02-10  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_bcd_cmp, packed_is_negative, decimal_convert_scale,
	  insert_packed_aligned): finished

2023-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* mlio.c, common.c: handle HAVE_JSON_C_JSON_H
	* intrinsic.c (split_around_t): explicit terminate snprintf
	* termio.c (pretty_display_numeric): fix GCC warning with {{ 0 }}
	* termio.c (display_alnum_dump): slightly rewritten to fix compiler
	  warnings
	* cconv.c (cob_load_collation), common.c, intrinisic.c (cob_intr_random),
	  termio.c: minor adjustments to fix compiler warnings
	* fileio.c (copy_fcd_to_file): fixed memory issues with writing to assign
	  and select name
	* fileio.c (save_status): don't synch directly after open or close
	* fileio.c (cob_file_open), (open_next): include binary in open flags if
	  cobsetptr->cob_unix_lf is set
	* fileio.c (open_next): set binary file mode, minor refactoring
	* fileio.c (cob_file_close) [_WIN32]: don't try to unlock invalid file
	  handles; mark file descriptor as closed when file handle was closed
	
2023-02-06  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_get_packed, cob_decimal_get_display):
	  fix use of mpz_cmp to compare >= 0 (also fixing use on MPIR)
	* numeric.c (cob_set_packed_int): fix negative sign
	* move.c (packed_get_long_long): fix sign regression introduced 2023-01-28
	* move.c (own_byte_memcpy): removed and replaced replaced by memcpy
	* move.c (cob_packed_get_sign): removed, inlined code in callers