@@ -1,4 +1,11 @@
 
+2023-02-22  Simon Sobisch <simonsobisch@gnu.org>
+
+	fix bug #874 DISPLAY of 9P fields (P to the left of the decimal point)
+	* termio.c (pretty_display_numeric): fix printing one byte after
+	  actual data
+	* termio.c (display_numeric): fix printing amount of P as leading zeroes
+
 2023-02-21  Simon Sobisch <simonsobisch@gnu.org>
 
 	* numeric.c (cob_decimal_set_packed): backport and extend optimization
@@ -10,6 +17,9 @@
 	* intrinsic.c, numeric.c: explicit check result of mpz_sgn to 0/!0/1/-1
 	* intrinsic.c (cob_intr_random): fix binary end for implicit seed
 	* intrinsic.c (numval): minor optimization for invalid numeric
+	* termio.c (display_numeric, pretty_display_numeric): use common
+	  COB_FIELD_INIT instead of manually init of field named "temp";
+	  minor speedup in output
 
 2023-02-10  Simon Sobisch <simonsobisch@gnu.org>
 
